# kondo_b3m_ros2

./: .gitignore  CMakeLists.txt  README.ja.md  README.md  b3m_port.cpp  package.xml
config/: 99-kondo-rs485.rules
include/kondo_b3m_ros2/: b3m_command.hpp  b3m_motor.hpp  b3m_port.hpp  kondo_b3m.hpp
kondo_b3m_interfaces/: CMakeLists.txt  package.xml
kondo_b3m_interfaces/msg/: SetDesired.msg
kondo_b3m_interfaces/srv/: ControlMode.srv  GetState.srv
kondo_b3m_ros2/: CMakeLists.txt  package.xml
kondo_b3m_ros2/include/kondo_b3m_ros2/: b3m_command.hpp  b3m_motor.hpp  b3m_port.hpp  kondo_b3m.hpp  kondo_b3m_util.hpp
kondo_b3m_ros2/launch/: launch_example.py
kondo_b3m_ros2/src/: b3m_command.cpp  b3m_motor.cpp  b3m_port.cpp  kondo_b3m.cpp  kondo_b3m_util.cpp
launch/: launch_example.py
msg/: DesiredPosition.msg  DesiredSpeed.msg
src/: b3m_command.cpp  b3m_command.hpp  b3m_motor.cpp  b3m_motor.hpp  b3m_port.cpp  b3m_port.hpp  b3m_publisher.cpp  b3m_publisher.hpp  kondo_b3m.cpp  kondo_b3m.hpp  kondo_b3m_ros2.cpp  util_id_changer.cpp  util_motor_configuration_tool.cpp
srv/: ControlMode.srv  Desired.srv  DesiredPosition.srv  DesiredSpeed.srv  MotorFree.srv  StartSpeedControl.srv
